<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f44336">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:src="@drawable/logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="4sp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_name"
            android:hint="@string/full_name"
            android:inputType="number"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="4sp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_address"
            android:inputType="number"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="4sp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/entre_your_mobile_number"
            android:inputType="number"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="4sp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_location"
            android:hint="@string/delivery_address"
            android:inputType="number"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="4sp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/create_password"
            android:inputType="number"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="4sp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/conform_password"
            android:inputType="number"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LogIn2"
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:layout_marginStart="190sp"
            android:layout_marginTop="8sp"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>